--- a/src/app/dashboard/pages/home/home.component.html
+++ b/src/app/dashboard/pages/home/home.component.html
@@ -1,12 +1,14 @@
-<div>
-  <div>
+<div class="wrapper">
+  <main>
     <h2>
       RIBOT te permite analizar datos de tu organización a través de sus
       sistemas de verificación de manera eficaz e interactiva
     </h2>
     <hr />
     <p>Es momento de buscar respuestas...</p>
-  </div>
-  <img src="" />
+  </main>
+  <img src="/assets/images/bg1.png" />
 </div>
-<button mat-button>Descubrir</button>
+<button mat-button class="primary" (click)="goCreateProject()">
+  Descubrir
+</button>
