--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -29,8 +29,10 @@ $menu-width: 186px;
 
         & .user {
             & img {
-                width: var(--avatar-size);
-                height: var(--avatar-size);
+                // width: var(--avatar-size);
+                // height: var(--avatar-size);
+                width: 100%;
+                height: 100%;
             }
         }
 
@@ -70,8 +72,18 @@ $menu-width: 186px;
                 cursor: pointer;
                 color: white;
                 margin-left: 16px;
-                width: $menu-width;
                 column-gap: 8px;
+                padding: 0 4px;
+
+                &.active {
+                    background-color: $tertiary;
+                    border-radius: 999px;
+                    color: $primary;
+                    text-decoration: none;
+                    & mat-icon {
+                        color: $primary !important;
+                    }
+                }
 
                 & mat-icon {
                     vertical-align: middle;
@@ -100,10 +112,19 @@ $menu-width: 186px;
     background-color: $primary;
     color: white;
     .mat-menu-content {
-        width: calc(#{$menu-width} + 16px);
+        width: calc(#{$menu-width} + 24px);
         padding: 16px 8px;
         & .empty {
             text-align: center;
+        }
+
+        & button {
+            color: $tertiary;
+            font-size: 18px;
+
+            & mat-icon {
+                color: $tertiary !important;
+            }
         }
     }
 }
