--- a/src/app/dashboard/pages/home/home.component.scss
+++ b/src/app/dashboard/pages/home/home.component.scss
@@ -20,14 +20,14 @@
             & h2 {
                 width: 50%;
                 font-size: 36px;
-                color: $primary;
+                color: $primary--400;
                 font-weight: bold;
             }
 
             & p {
                 width: 50%;
                 font-size: 22px;
-                color: $primary;
+                color: $primary--400;
                 font-weight: bold;
             }
 
